--- a/systemd/mjpeg-streamer@.service
+++ b/systemd/mjpeg-streamer@.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=HTTP server streaming a single MJPEG stream from the webcam
-Wants=mjpeg-streamer.service
+Upholds=mjpeg-streamer.service
 RefuseManualStart=yes
 CollectMode=inactive-or-failed
 
@@ -11,6 +11,7 @@ Environment=PYTHONUNBUFFERED=1
 ExecStart=/opt/mjpeg-multiplex-streamer/.venv/bin/python /opt/mjpeg-multiplex-streamer/server.py --socket=systemd /run/webcam/
 Restart=no
 WatchdogSec=10
+ExecStopPost=/bin/sh -c 'if [ $$SERVICE_RESULT = "watchdog" ]; then systemctl stop mjpeg-streamer.service; fi'
 
 ProtectSystem=strict
 PrivateTmp=yes
